pom: module setup